welcome.lessons.welcome.array.indexof.maxvalue.IndexOfMaxValue.scala.error
indexOfMaxValue:6: error: ';' expected but ',' found.
		if(y<nums(i)){y=nums(i),x=i}
                                       ^indexOfMaxValue:7: error: ';' expected but ',' found.
		else{y=y,x=x}
                        ^indexOfMaxValue:10: error: ';' expected but ',' found.
	return x,y
                ^