welcome.lessons.welcome.array.indexof.maxvalue.IndexOfMaxValue.scala.code
def indexOfMaxValue(nums:Array[Int]):Int = {
		var x=0
     var y= nums(0)
	
	for (i <- 1 to nums.length-1) {
		if(y<nums(i)){y=nums(i),x=i}
		else{y=y,x=x}
		} 
		
	return x,y

}
